@@ -34,11 +34,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-exports</arg>
-<!--                        <arg>javafx.graphics/com.sun.glass.ui=com.sun.javafx</arg>-->
-                        <arg>/home/mrundead/Загрузки/javafx-sdk-14.0.1/lib</arg>
-                    </compilerArgs>
                     <release>${maven.compiler.release}</release>
                     <source>14</source>
                     <target>14</target>
@@ -47,7 +42,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.2</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
                     <compress>0</compress>
